--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     user: root
     command: chown -R 1001:1001 /bitnami
     volumes:
-      - '/var/ta_hrm_tool/mariadb_data:/bitnami'
+      - './data/mariadb_data:/bitnami'
   mariadb:
     image: 'bitnami/mariadb:latest'
     environment:
@@ -29,5 +29,5 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - '/var/ta_hrm_tool/orangehrm_data:/bitnami'
+      - './data/orangehrm_data:/bitnami'
  
